// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarComponent Snapshot tests should render sidebar 1`] = `
"<div data-testid=\\"solicitation__sidebar\\" class=\\"SidebarContainer-cqrich irOjqx\\">
  <div class=\\"SidebarItem-XaPbz gIiPyS\\">
    <div color=\\"#053d4e\\" class=\\"SidebarStatus-dgmLnO fHuHAV\\"><span class=\\"SidebarStatusLabel-hGcnrw ehMEde\\">Status</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">Open</span></div>
    <div class=\\"SidebarBalance-leGaVI fFtPKT\\"><span class=\\"SidebarBalanceLabel-fVYzkq fGGJxP\\">BALANCE</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">-</span></div>
    <div class=\\"SidebarDetails-ktTDpU lhQSIV\\">
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-up\\" class=\\"svg-inline--fa fa-arrow-alt-circle-up fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Spent</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">123.213,21</span></div>
        </div>
      </div>
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-down\\" class=\\"svg-inline--fa fa-arrow-alt-circle-down fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Received</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">0</span></div>
        </div>
      </div>
    </div>
    <div class=\\"SidebarStatementContainer-jOdJss ihOzjf\\"><span class=\\"SidebarStatementTitile-dsvdNO faKCgs\\">Statement</span><span class=\\"SidebarStatementHeader-cjRUUA bAuHwC\\"><span>Description</span><span>Value</span></span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Declarated expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>123.213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense declarated by trooper</span>
    </div>
  </div>
</div>"
`;

exports[`SidebarComponent Snapshot tests should render sidebar with conditional layouts 1`] = `
"<div data-testid=\\"solicitation__sidebar\\" class=\\"SidebarContainer-cqrich irOjqx\\">
  <div class=\\"SidebarItem-XaPbz gIiPyS\\">
    <div color=\\"#03a046\\" class=\\"SidebarStatus-dgmLnO gA-dDlh\\"><span class=\\"SidebarStatusLabel-hGcnrw ehMEde\\">Status</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">Approved</span></div>
    <div class=\\"SidebarBalance-leGaVI fFtPKT\\"><span class=\\"SidebarBalanceLabel-fVYzkq fGGJxP\\">BALANCE</span>
      <div><span class=\\"SidebarDescription-jsaGHA cwpTuU\\">ARS</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">213,21</span></div>
    </div>
    <div class=\\"SidebarDetails-ktTDpU lhQSIV\\">
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-up\\" class=\\"svg-inline--fa fa-arrow-alt-circle-up fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Spent</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">123.213,21</span></div>
        </div>
      </div>
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-down\\" class=\\"svg-inline--fa fa-arrow-alt-circle-down fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Received</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">0</span></div>
        </div>
      </div>
    </div>
    <div class=\\"SidebarStatementContainer-jOdJss ihOzjf\\"><span class=\\"SidebarStatementTitile-dsvdNO faKCgs\\">Statement</span><span class=\\"SidebarStatementHeader-cjRUUA bAuHwC\\"><span>Description</span><span>Value</span></span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Declarated expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>123.213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense declarated by trooper</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Approved expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense approved by financial department</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Paid</span>
      <div class=\\"SidebarCurrencyReturned-hMylkm gmHzjn\\"><span color=\\"#03a046\\" class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs cJrsfi jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Paid by financial department</span>
    </div>
  </div>
  <div class=\\"SidebarItem-XaPbz gIiPyS\\">
    <div color=\\"#053d4e\\" class=\\"SidebarStatus-dgmLnO fHuHAV\\"><span class=\\"SidebarStatusLabel-hGcnrw ehMEde\\">Status</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">Pending</span></div>
    <div class=\\"SidebarBalance-leGaVI fFtPKT\\"><span class=\\"SidebarBalanceLabel-fVYzkq fGGJxP\\">BALANCE</span>
      <div><span class=\\"SidebarDescription-jsaGHA cwpTuU\\">ARS</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">213,21</span></div>
    </div>
    <div class=\\"SidebarDetails-ktTDpU lhQSIV\\">
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-up\\" class=\\"svg-inline--fa fa-arrow-alt-circle-up fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Spent</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">123.213,21</span></div>
        </div>
      </div>
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-down\\" class=\\"svg-inline--fa fa-arrow-alt-circle-down fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Received</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">0</span></div>
        </div>
      </div>
    </div>
    <div class=\\"SidebarStatementContainer-jOdJss ihOzjf\\"><span class=\\"SidebarStatementTitile-dsvdNO faKCgs\\">Statement</span><span class=\\"SidebarStatementHeader-cjRUUA bAuHwC\\"><span>Description</span><span>Value</span></span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Declarated expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>123.213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense declarated by trooper</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Approved expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense approved by financial department</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Paid</span>
      <div class=\\"SidebarCurrencyReturned-hMylkm gmHzjn\\"><span color=\\"#03a046\\" class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs cJrsfi jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Paid by financial department</span>
    </div>
  </div>
  <div class=\\"SidebarItem-XaPbz gIiPyS\\">
    <div color=\\"#053d4e\\" class=\\"SidebarStatus-dgmLnO fHuHAV\\"><span class=\\"SidebarStatusLabel-hGcnrw ehMEde\\">Status</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">Open</span></div>
    <div class=\\"SidebarBalance-leGaVI fFtPKT\\"><span class=\\"SidebarBalanceLabel-fVYzkq fGGJxP\\">BALANCE</span>
      <div><span class=\\"SidebarDescription-jsaGHA cwpTuU\\">ARS</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">213,21</span></div>
    </div>
    <div class=\\"SidebarDetails-ktTDpU lhQSIV\\">
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-up\\" class=\\"svg-inline--fa fa-arrow-alt-circle-up fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Spent</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">123.213,21</span></div>
        </div>
      </div>
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-down\\" class=\\"svg-inline--fa fa-arrow-alt-circle-down fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Received</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">0</span></div>
        </div>
      </div>
    </div>
    <div class=\\"SidebarStatementContainer-jOdJss ihOzjf\\"><span class=\\"SidebarStatementTitile-dsvdNO faKCgs\\">Statement</span><span class=\\"SidebarStatementHeader-cjRUUA bAuHwC\\"><span>Description</span><span>Value</span></span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Declarated expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>123.213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense declarated by trooper</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Approved expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense approved by financial department</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Paid</span>
      <div class=\\"SidebarCurrencyReturned-hMylkm gmHzjn\\"><span color=\\"#03a046\\" class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs cJrsfi jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Paid by financial department</span>
    </div>
  </div>
  <div class=\\"SidebarItem-XaPbz gIiPyS\\">
    <div color=\\"#f44336\\" class=\\"SidebarStatus-dgmLnO evjWUD\\"><span class=\\"SidebarStatusLabel-hGcnrw ehMEde\\">Status</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">Cancelled</span></div>
    <div class=\\"SidebarBalance-leGaVI fFtPKT\\"><span class=\\"SidebarBalanceLabel-fVYzkq fGGJxP\\">BALANCE</span>
      <div><span class=\\"SidebarDescription-jsaGHA cwpTuU\\">ARS</span><span class=\\"SidebarDescription-jsaGHA gikEwh\\">213,21</span></div>
    </div>
    <div class=\\"SidebarDetails-ktTDpU lhQSIV\\">
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-up\\" class=\\"svg-inline--fa fa-arrow-alt-circle-up fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Spent</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">123.213,21</span></div>
        </div>
      </div>
      <div class=\\"SidebarDetailsItem-kiIgBJ jyMqVx\\"><svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"far\\" data-icon=\\"arrow-alt-circle-down\\" class=\\"svg-inline--fa fa-arrow-alt-circle-down fa-w-16 SidebarDetailsIcon-VddFL ezxJiw\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\">
          <path fill=\\"currentColor\\" d=\\"M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z\\"></path>
        </svg>
        <div><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Received</span>
          <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span class=\\"SidebarDetailsCurrency-iqyPuT dFOQZT\\">0</span></div>
        </div>
      </div>
    </div>
    <div class=\\"SidebarStatementContainer-jOdJss ihOzjf\\"><span class=\\"SidebarStatementTitile-dsvdNO faKCgs\\">Statement</span><span class=\\"SidebarStatementHeader-cjRUUA bAuHwC\\"><span>Description</span><span>Value</span></span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Declarated expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>123.213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense declarated by trooper</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Approved expense</span>
      <div><span class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs dFOQZT jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Expense approved by financial department</span><span class=\\"SidebarStatementBody-dNtobj hOLQPS\\"><span>Paid</span>
      <div class=\\"SidebarCurrencyReturned-hMylkm gmHzjn\\"><span color=\\"#03a046\\" class=\\"SidebarDetailsCurrency-iqyPuT SidebarCurrencyCode-emKNWs cJrsfi jELjcC\\">ARS</span><span>213,21</span></div></span><span class=\\"SidebarLabel-emzaNI fWNuwI\\">Paid by financial department</span>
    </div>
  </div>
</div>"
`;
